# rastro

./: README.md  compose.yaml  dockerfile  manage.py  pyproject.toml  todo.md
.trash/api/: __init__.py
.trash/api/common/: responses.py
.trash/api/exceptions/: __init__.py  handlers.py
.trash/api/v1/: urls.py
.trash/config/: validators.py
.trash/config/environments/: __init__.py
.trash/conta/: __init__.py
.trash/conta/application/use_cases/: get_user.py
.trash/conta/domain/: __init__.py  entities.py  exceptions.py  repositories.py
.trash/conta/domain/tests/: test_entities.py  test_services.py
.trash/conta/infrastructure/: authentication.py  repositories.py
.trash/conta/presentation/: __init__.py  views.py
.trash/observability/domain/: __init__.py
.trash/observability/infrastructure/otel/: traces.py
.trash/shared/domain/: __init__.py
.trash/shared/domain/exceptions/: __init__.py
.trash/shared/domain/value_objects/: __init__.py  email.py  id.py
.trash/shared/infrastructure/: __init__.py
.trash/shared/infrastructure/serialization/: __init__.py
.trash/tarefas/: __init__.py  admin.py  apps.py  models.py
.trash/tarefas/application/: __init__.py  dto.py  exceptions.py
.trash/tarefas/application/use_cases/: __init__.py  create_task.py  delete_task.py  get_task.py  list_tasks.py  update_task.py
.trash/tarefas/domain/: __init__.py  entities.py  exceptions.py  repositories.py  value_objects.py
.trash/tarefas/domain/tests/: test_entities.py
.trash/tarefas/infrastructure/: __init__.py  error_inducers.py  models.py  repositories.py
.trash/tarefas/presentation/: __init__.py  forms.py  serializers.py  urls.py  views.py
djangotel/: settings.py
docker/grafana/provisioning/dashboards/: rastro-dashboards.yaml  rastro.yaml
docker/grafana/provisioning/datasources/: clickhouse.yaml
docker/otel/: config.yaml
rastro/conta/: mappers.py
src/djangotel/: asgi.py  settings.py  telemetry.py  urls.py  wsgi.py
src/rastro/: asgi.py  env.py  observability.py  schemas.py  settings.py  telemetry.py  urls.py  wsgi.py
src/rastro/api/common/: __init__.py  pagination.py
src/rastro/auth/: apps.py  views.py
src/rastro/base/: __init__.py  aggregate.py  domain_event.py  domain_service.py  dto.py  entities.py  error.py  errors.py  mappers.py  mixins.py  parsers.py  presenters.py  serialization.py  use_cases.py  value_objects.py
src/rastro/config/: __init__.py  validators.py
src/rastro/conta/: apps.py  dto.py  entities.py  errors.py  mappers.py  presenters.py  repository.py  repository_impl.py  schemas.py  urls.py  use_cases.py  value_objects.py  views.py
src/rastro/observability/: __init__.py
src/rastro/shared/: __init__.py
src/rastro/tarefas/: apps.py  urls.py
src/rastro/tasks/: apps.py  models.py
src/rastro/users/: apps.py  dto.py  dtos.py  entities.py  errors.py  mappers.py  presenters.py  repositories.py  repository.py  schema.py  schemas.py  urls.py  use_cases.py  value_objects.py  views.py
src/rastro_base/: entity.py  value_objects.py
src/rastro_shared_kernel/: constants.py  mixins.py  value_objects.py
(+80 files in other folders)
