[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[project]
name = "rastro"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "opentelemetry-exporter-otlp>=1.40.0",
    "opentelemetry-instrumentation-django>=0.61b0",
    "opentelemetry-sdk>=1.40.0",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
]
