[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[project]
name = "rastro"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django[argon2]>=6.0.3",
    "gunicorn>=25.3.0",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-exporter-otlp>=1.40.0",
    "opentelemetry-instrumentation-django>=0.61b0",
    "opentelemetry-instrumentation-logging>=0.61b0",
    "opentelemetry-sdk>=1.40.0",
    "psycopg2>=2.9.11",
]

[dependency-groups]
dev = [
    "django-stubs-ext>=6.0.1",
    "django-stubs[compatible-mypy]>=6.0.1",
]

[tool.mypy]
strict = true
exclude = '(^|/)migrations/'
plugins = ["mypy_django_plugin.main", "pydantic.mypy"]
# disallow_any_unimported = true
# disallow_any_expr = true
# disallow_any_decorated = true
# disallow_any_explicit = true
warn_unreachable = true
no_implicit_optional = true
strict_optional = true
warn_no_return = true
show_error_codes = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.django-stubs]
django_settings_module = "rastro.settings"
